@@ -12,6 +12,16 @@ name|servlet
 package|;
 end_package
 
+begin_import
+import|import
+name|javax
+operator|.
+name|servlet
+operator|.
+name|ServletInputStream
+import|;
+end_import
+
 begin_comment
 comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
@@ -4154,6 +4164,8 @@ finally|finally
 block|{
 try|try
 block|{
+try|try
+block|{
 if|if
 condition|(
 name|exp
@@ -4215,6 +4227,15 @@ expr_stmt|;
 block|}
 block|}
 block|}
+finally|finally
+block|{
+name|consumeInput
+argument_list|(
+name|req
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 DECL|method|sendError
 specifier|protected
@@ -4253,6 +4274,72 @@ operator|.
 name|info
 argument_list|(
 literal|"Unable to write error response, client closed connection or we are shutting down"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|consumeInput
+argument_list|(
+name|req
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|// when we send back an error, we make sure we read
+comment|// the full client request so that the client does
+comment|// not hit a connection reset and we can reuse the
+comment|// connection - see SOLR-8453
+DECL|method|consumeInput
+specifier|private
+name|void
+name|consumeInput
+parameter_list|(
+name|HttpServletRequest
+name|req
+parameter_list|)
+block|{
+try|try
+block|{
+name|ServletInputStream
+name|is
+init|=
+name|req
+operator|.
+name|getInputStream
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+operator|!
+name|is
+operator|.
+name|isFinished
+argument_list|()
+operator|&&
+name|is
+operator|.
+name|read
+argument_list|()
+operator|!=
+operator|-
+literal|1
+condition|)
+block|{}
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Could not consume full client request"
 argument_list|,
 name|e
 argument_list|)
@@ -4860,6 +4947,25 @@ argument_list|,
 name|e
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|solrRsp
+operator|.
+name|getException
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|consumeInput
+argument_list|(
+name|req
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 DECL|method|checkStateIsValid
